<?xml version="1.0"?>
<package format="3">
  <name>vision_msgs</name>
  <version>0.0.1</version>
  <description>
    Messages for interfacing with various computer vision pipelines, such as
    object detectors.
  </description>

  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>
  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>rosunit</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
